# fastapi-2fa

./: README.md  pyproject.toml
src/app/: main.py
src/app/core/: hashing.py  otp.py
src/app/database/: base.py  session.py  utils.py
src/app/database/models/: users.py
src/app/database/repository/: users.py
src/app/schemas/: users.py
src/app/static/css/: style.css
src/app/templates/: base.html  index.html  login.html  qrcode.html  signup.html
src/app/webapps/: base.py
src/app/webapps/login/: forms.py  route_login.py
src/app/webapps/signup/: forms.py  route_signup.py
